--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
     "lint:types": "tsc",
     "lint:versions": "node ./scripts/lint-versions.js",
-    "release": "npm run build:types && npm run build:docs && changeset publish",
+    "release": "npm run build:docs && changeset publish",
     "start": "npm run storybook",
     "storybook": "start-storybook -p 9001",
     "storybook:build": "build-storybook",
@@ -41,6 +41,7 @@
     "@changesets/cli": "^2.9.2",
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.0",
+    "@lion/ajax": "^0.6.0",
     "@mdjs/core": "^0.3.1",
     "@open-wc/building-rollup": "^1.2.1",
     "@open-wc/demoing-storybook": "^2.0.2",
