--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "typescript": "3.9.7",
     "web-component-analyzer": "^1.0.3",
     "webpack-merge": "^4.1.5",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "@lion/core": "0.13.8"
   },
   "bundlesize": [
     {
