--- a/packages-node/providence-analytics/package.json
+++ b/packages-node/providence-analytics/package.json
@@ -50,7 +50,8 @@
     "parse5": "^5.1.1",
     "read-package-tree": "5.3.1",
     "semver": "^7.1.3",
-    "typescript": "3.9.7"
+    "typescript": "3.9.7",
+    "@lion/core": "0.13.8"
   },
   "keywords": [
     "analysis",
